--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,11 @@
 [tox]
-envlist = py27, py33, pypy
+envlist = py27, py33
+#envlist = py27, py33, pypy
 
 [testenv]
 changedir=src/tests
 deps = pytest
-commands = py.test -rxsv
+       igo-python
+       git+git://git.tuxfamily.org/gitroot/tinysegmente/tinysegmenter.git
+#tinysegmenter
+commands = py.test -sv
