prepare for release

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,10 @@ envlist = py27, py33
 #envlist = py27, py33, pypy
 
 [testenv]
-changedir=src/tests
+changedir=tests
 deps = pytest
        igo-python
        git+git://git.tuxfamily.org/gitroot/tinysegmente/tinysegmenter.git
 #tinysegmenter
 commands = py.test -sv
+
