corrected wrong xNext behavior
merged suggest changes for issue #1 by saaj
 * Tokenizer.tokenize returns tokenized text, start/end position in given text in bytes, and it changed a generator.
 * sets position/length in the correct unit(bytes instead of length of unicode string)
 * skips empty token

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,29 @@
 [tox]
-envlist = py27, py33
-#envlist = py27, py33, pypy
+envlist = py27, py33, py34
 
 [testenv]
 changedir=tests
-deps = pytest
-       igo-python
-       git+git://git.tuxfamily.org/gitroot/tinysegmente/tinysegmenter.git
+deps=
+     pytest
+     igo-python
+     git+git://git.tuxfamily.org/gitroot/tinysegmente/tinysegmenter.git
 #tinysegmenter
-commands = py.test -sv
+commands=
+    py.test -sv
+
+[testenv:pp34]
+deps=
+    {[testenv]deps}
+    enum34
+
+[testenv:py33]
+deps=
+    {[testenv:pp34]deps}
+[testenv:py27]
+deps=
+    {[testenv:pp34]deps}
+
+[testenv:pypy]
+deps=
+    {[testenv:pp34]deps}
 
