use tinysegmenter3 pkg. instead of tinysegmenter

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 [tox]
-envlist = py27, py33, py34
+envlist = py27, py33, py34, py35
 
 [testenv]
 changedir=tests
+passenv=IGO_DICT
 deps=
      pytest
      igo-python
-     git+git://git.tuxfamily.org/gitroot/tinysegmente/tinysegmenter.git
+     tinysegmenter3
 #tinysegmenter
 commands=
     py.test -sv
