add additional tokenizers for ja-JP

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ deps=
      pytest
      igo-python
      tinysegmenter3
-#tinysegmenter
+     mecab-python3
+     janome
+     natto-py
 commands=
     py.test -sv
