add testing stuff on windows

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,18 @@
 [tox]
-envlist = py27, py33, py34, py35
+envlist = {py27,py33,py34,py35}-{win,linux}
 
 [testenv]
-changedir=tests
-deps=
-     pytest
-     igo-python
-     tinysegmenter3
-     mecab-python3
-     janome
-     natto-py
+changedir = tests
+passenv = PYTHONPATH
+platform =
+    win: win32
+    linux: linux
+deps =
+    pytest
+    igo-python
+    janome
+    tinysegmenter3
+    linux: mecab-python3
+    linux: natto-py
 commands=
     py.test -sv
