--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py33,py34,py35}-{win,linux}
+envlist = {py27,py33,py34,py35,pypy,pypy3}-{win,linux}
 
 [testenv]
 changedir = tests
@@ -13,7 +13,7 @@ deps =
     igo-python
     janome
     tinysegmenter3
-    linux: mecab-python3
-    linux: natto-py
+    py{27,33,34,35}-linux: mecab-python3
+    py{27,33,34,35}-linux: natto-py
 commands=
     py.test -sv
