avoid pytest issue 1822

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,7 @@ platform =
     win: win32
     linux: linux
 deps =
-    pytest
-    cffi
+    pytest<3.0.0
     igo-python
     janome
     tinysegmenter3
