add basic support for APSW

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py33,py34,py35,pypy,pypy3}-{win,linux}
+envlist = {py27,py33,py34,py35,py36,pypy,pypy3}-{win,linux},py{27,36}-apsw-linux
 
 [testenv]
 changedir = tests
@@ -12,7 +12,18 @@ deps =
     igo-python
     janome
     tinysegmenter3
-    py{27,33,34,35}-linux: mecab-python3
-    py{27,33,34,35}-linux: natto-py
+    py{27,33,34,35,36}-linux: mecab-python3
+    py{27,33,34,35,36}-linux: natto-py
 commands=
     py.test -sv
+
+[apsw]
+commands=
+    pip install apsw --global-option=build --global-option=--enable-all-extensions
+    py.test -sv
+
+[testenv:py36-apsw-linux]
+commands={[apsw]commands}
+
+[testenv:py27-apsw-linux]
+commands={[apsw]commands}
