--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,10 @@ environment:
     SQLITE_WIN32_URL: https://www.sqlite.org/2017/sqlite-dll-win32-x86-3190300.zip
     SQLITE_WIN64_URL: https://www.sqlite.org/2017/sqlite-dll-win64-x64-3190300.zip
   matrix:
+    - PYTHON: C:\Python36
+      ARCH: x86
+    - PYTHON: C:\Python36-x64
+      ARCH: x64
     - PYTHON: C:\Python35
       ARCH: x86
     - PYTHON: C:\Python35-x64
