add tests to insert many records to test leaks

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     igo-python
     janome
     tinysegmenter3
+    faker
     py{27,33,34,35,36}-linux: mecab-python3
     py{27,33,34,35,36}-linux: natto-py
 commands=
