use the latest APSW for test

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands=
 
 [apsw]
 commands=
-    pip install apsw --global-option=build --global-option=--enable-all-extensions
+    pip install https://github.com/rogerbinns/apsw/releases/download/3.21.0-r1/apsw-3.21.0-r1.zip --global-option=build --global-option=--enable-all-extensions
     py.test -svrx
 
 [testenv:py36-apsw-linux]
