add an entry to build APSW ignoring system's sqlite

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py33,py34,py35,py36,pypy,pypy3}-{win,linux},py{27,36}-apsw-linux
+envlist = {py27,py33,py34,py35,py36,pypy,pypy3}-{win,linux},py{27,36}-apsw-linux,py{27,36}-apswa-linux
 
 [testenv]
 changedir = tests
@@ -21,6 +21,11 @@ commands=
 [apsw]
 commands=
     pip install https://github.com/rogerbinns/apsw/releases/download/3.21.0-r1/apsw-3.21.0-r1.zip --global-option=build --global-option=--enable-all-extensions
+    py.test -svrx
+
+[apswa]
+commands=
+    pip install https://github.com/rogerbinns/apsw/releases/download/3.21.0-r1/apsw-3.21.0-r1.zip --global-option=fetch --global-option=--all --global-option=build --global-option=--enable-all-extensions
     py.test -svrx
 
 [testenv:py36-apsw-linux]
