--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,9 +3,13 @@ cache:
 
 environment:
   global:
-    SQLITE_WIN32_URL: https://www.sqlite.org/2017/sqlite-dll-win32-x86-3190300.zip
-    SQLITE_WIN64_URL: https://www.sqlite.org/2017/sqlite-dll-win64-x64-3190300.zip
+    SQLITE_WIN32_URL: https://www.sqlite.org/2018/sqlite-dll-win32-x86-3250100.zip
+    SQLITE_WIN64_URL: https://www.sqlite.org/2018/sqlite-dll-win64-x64-3250100.zip
   matrix:
+    - PYTHON: C:\Python37
+      ARCH: x86
+    - PYTHON: C:\Python37-x64
+      ARCH: x64
     - PYTHON: C:\Python36
       ARCH: x86
     - PYTHON: C:\Python36-x64
