--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py33,py34,py35,py36,py37,pypy,pypy3}-{win,linux},py{27,37}-apsw-linux,py{27,37}-apswa-linux
+envlist = {py27,py34,py35,py36,py37,pypy,pypy3}-{win,linux},py{27,37}-apsw-linux,py{27,37}-apswa-linux
 
 [testenv]
 changedir = tests
@@ -13,7 +13,7 @@ deps =
     janome
     tinysegmenter3
     faker
-    py{27,33,34,35,36,37}-linux: mecab-python3
+    py{27,34,35,36,37}-linux: mecab-python3
     py{27,34,35,36,37}-linux: natto-py
 commands=
     py.test -svrx
