drop Python 2.7 and 3.4 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py34,py35,py36,py37,pypy,pypy3}-{win,linux},py{27,37}-apsw-linux,py{27,37}-apswa-linux
+envlist = {py35,py36,py37,pypy,pypy3}-{win,linux},py{37}-apsw-linux,py{27,37}-apswa-linux
 
 [testenv]
 changedir = tests
@@ -13,8 +13,8 @@ deps =
     janome
     tinysegmenter3
     faker
-    py{27,34,35,36,37}-linux: mecab-python3
-    py{27,34,35,36,37}-linux: natto-py
+    py{35,36,37}-linux: mecab-python3
+    py{35,36,37}-linux: natto-py
 commands=
     py.test -svrx
 
@@ -29,7 +29,4 @@ commands=
     py.test -svrx
 
 [testenv:py37-apsw-linux]
-commands={[apsw]commands}
-
-[testenv:py27-apsw-linux]
 commands={[apsw]commands}
