--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = {py35,py36,py37,pypy,pypy3}-{win,linux},py{37}-apsw-linux,py{27,37}-apswa-linux
+envlist = {py36,py37,py38,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
+# envlist = {py27,py35,py36,py37,py38,pypy,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
 
 [testenv]
 changedir = tests
@@ -13,20 +14,23 @@ deps =
     janome
     tinysegmenter3
     faker
-    py{35,36,37}-linux: mecab-python3
-    py{35,36,37}-linux: natto-py
+    py{35,36,37,38}-linux: mecab
+    py{35,36,37,38}-linux: natto-py
 commands=
     py.test -svrx
 
 [apsw]
 commands=
-    pip install https://github.com/rogerbinns/apsw/releases/download/3.24.0-r1/apsw-3.24.0-r1.zip --global-option=build --global-option=--enable-all-extensions
+    pip install https://github.com/rogerbinns/apsw/releases/download/3.32.2-r1/apsw-3.32.2-r1.zip --global-option=build --global-option=--enable-all-extensions
     py.test -svrx
 
 [apswa]
 commands=
-    pip install https://github.com/rogerbinns/apsw/releases/download/3.24.0-r1/apsw-3.24.0-r1.zip --global-option=fetch --global-option=--all --global-option=build --global-option=--enable-all-extensions
+    pip install https://github.com/rogerbinns/apsw/releases/download/3.32.2-r1/apsw-3.32.2-r1.zip --global-option=fetch --global-option=--version=3.32.2 --global-option=--sqlite --global-option=build --global-option=--enable-all-extensions
     py.test -svrx
 
-[testenv:py37-apsw-linux]
+[testenv:py38-apsw-linux]
 commands={[apsw]commands}
+
+[testenv:py38-apswa-linux]
+commands={[apswa]commands}
