--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,17 @@ sudo: false
 language: python
 matrix:
   include:
-    - python: "3.5"
+#    - python: "2.7"
+#    - python: "3.5"
     - python: "3.6"
     - python: "3.7"
-      dist: xenial
-      sudo: required
-    - python: "pypy"
+    - python: "3.8"
+#    - python: "pypy"
     - python: "pypy3"
 before_install:
-  - sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
+  - sudo apt update && sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
 install:
-  - curl https://www.sqlite.org/2018/sqlite-autoconf-3250100.tar.gz | tar zxf -
-  - pushd sqlite-autoconf-3250100 && ./configure --enable-fts5 && make && sudo make install && sudo ldconfig && popd
+  - curl https://www.sqlite.org/2020/sqlite-autoconf-3320300.tar.gz | tar zxf -
+  - pushd sqlite-autoconf-3320300 && ./configure --enable-fts5 && make && sudo make install && sudo ldconfig && popd
   - pip install tox-travis
 script: tox
