switch tinysegmenter3 -> tinysegmenter

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     pytest
     igo-python
     janome
-    tinysegmenter3
+    tinysegmenter
     faker
     py{35,36,37,38}-linux: mecab
     py{35,36,37,38}-linux: natto-py
