--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ sudo: false
 language: python
 matrix:
   include:
-#    - python: "2.7"
-#    - python: "3.5"
+    - python: "2.7"
+    - python: "3.5"
     - python: "3.6"
     - python: "3.7"
     - python: "3.8"
-#    - python: "pypy"
+    - python: "pypy"
     - python: "pypy3"
 before_install:
   - sudo apt update && sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
