--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,19 @@
 [tox]
 envlist = {py36,py37,py38,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
 # envlist = {py27,py35,py36,py37,py38,pypy,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
+skip_missing_interpreters = true
+
+[gh-actions]
+python =
+    2.7 = py27
+    3.5 = py35
+    3.6 = py36
+    3.7 = py37
+    3.8 = py38
+    3.9 = py39
+    3.10 = py310
+    pypy-2 = pypy2
+    pypy-3 = pypy3
 
 [testenv]
 changedir = tests
