--- a/tox.ini
+++ b/tox.ini
@@ -5,15 +5,15 @@ skip_missing_interpreters = true
 
 [gh-actions]
 python =
-    2.7 = py27
-    3.5 = py35
-    3.6 = py36
-    3.7 = py37
-    3.8 = py38
-    3.9 = py39
-    3.10 = py310
-    pypy-2 = pypy2
-    pypy-3 = pypy3
+    2.7: py27
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    pypy-2: pypy2
+    pypy-3: pypy3
 
 [testenv]
 changedir = tests
