--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -11,10 +11,11 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.platform }}
     strategy:
       fail-fast: false
       matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["2.x", "3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
 
     steps:
@@ -24,6 +25,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install native deps
+      if: runner.os == 'Linux'
       run: |
         sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
     - name: Install dependencies
@@ -33,3 +35,5 @@ jobs:
     - name: Test with tox
       run: |
         tox
+      env:
+        PLATFORM: ${{ matrix.platform }}
