--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -24,10 +24,19 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install native deps
+    - name: Install native deps (Linux)
       if: runner.os == 'Linux'
       run: |
         sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
+    - name: Install native deps (Windows)
+      if: runer.os == 'Windows'
+      shell: bash
+      run: |
+        curl -fsSL -o sqlite_dll.zip https://www.sqlite.org/2018/sqlite-dll-win64-x64-3250100.zip
+        7z x sqlite_dll.zip sqlite3.dll
+        mkdir -p temp/DLLs
+        cp $(python -c "import sys, pathlib; print([x for x in map(pathlib.Path, sys.path) if x.name == 'DLLs'][0]/'_sqlite3.pyd')") temp/DLLs 
+        cp sqlite3.dll temp/DLLs
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -37,3 +46,5 @@ jobs:
         tox
       env:
         PLATFORM: ${{ matrix.platform }}
+        PYTHONPATH: temp/DLLs
+        PYTHONIOENCODING: utf-8
