--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
     - name: Install native deps (Windows)
-      if: runer.os == 'Windows'
+      if: runner.os == 'Windows'
       shell: bash
       run: |
         curl -fsSL -o sqlite_dll.zip https://www.sqlite.org/2018/sqlite-dll-win64-x64-3250100.zip
