--- a/tox.ini
+++ b/tox.ini
@@ -15,12 +15,19 @@ python =
     pypy-2: pypy2
     pypy-3: pypy3
 
+[gh-actions:env]
+PLATFORM =
+    ubuntu-latest: linux
+    macos-latest: macos
+    windows-latest: windows
+
 [testenv]
 changedir = tests
 passenv = PYTHONPATH
 platform =
     win: win32
     linux: linux
+    macos: darwin
 deps =
     pytest
     igo-python
