--- a/tox.ini
+++ b/tox.ini
@@ -31,11 +31,12 @@ platform =
 deps =
     pytest
     igo-python
-    janome
+    py27,pypy2: janome<0.4
+    py{35,36,37,38,39,310},pypy3: janome
     tinysegmenter
     faker
-    py{35,36,37,38}-linux: mecab
-    py{35,36,37,38}-linux: natto-py
+    linux: mecab
+    linux: natto-py
 commands=
     py.test -svrx
 
