--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ platform =
 deps =
     pytest
     igo-python
+    py27,pypy2: pathlib
     py27,pypy2: janome<0.4
     py{35,36,37,38,39,310},pypy3: janome
     tinysegmenter
