set LANG to try to avoid unicode error

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -49,3 +49,4 @@ jobs:
         PLATFORM: ${{ matrix.platform }}
         PYTHONPATH: temp/DLLs
         PYTHONIOENCODING: utf-8
+        LANG: en_US.UTF-8
