--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist = {py27,py36,py37,py38,pypy2,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
-# envlist = {py27,py35,py36,py37,py38,pypy,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
+envlist = {py27,py35,py36,py37,py38,py39,py310,pypy2,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
 skip_missing_interpreters = true
 
 [gh-actions]
