--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        # platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [windows-latest]
         python-version: ["3.7", "3.8", "3.9", "3.10", "pypy-3.8"]
 
     steps:
@@ -42,9 +43,7 @@ jobs:
         cp -v $(python -c "import sys, pathlib; print([x for x in map(pathlib.Path, sys.path) if x.name == 'DLLs'][0]/'_sqlite3.pyd')") temp/DLLs 
         cp -v sqlite3.dll temp/DLLs
     - name: Test with tox
-      run: |
-        tox
+      run: tox
       env:
-        PLATFORM: ${{ matrix.platform }}
         PYTHONPATH: temp/DLLs
         PYTHONIOENCODING: utf-8
