--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         # platform: [ubuntu-latest, macos-latest, windows-latest]
         platform: [windows-latest]
-        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "pypy-2.x", "pypy-3.x"]
+        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
 
     steps:
     - uses: actions/checkout@v2
