use the latest sqlite3.dll for py27-win

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -34,10 +34,10 @@ jobs:
       run: |
         sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
     - name: Install native deps (Windows)
-      if: runner.os == 'Windows'
+      if: runner.os == 'Windows' && matrix.python-version == "2.7"
       shell: bash
       run: |
-        curl -fsSL -o sqlite_dll.zip https://www.sqlite.org/2018/sqlite-dll-win64-x64-3250100.zip
+        curl -fsSL -o sqlite_dll.zip https://www.sqlite.org/2021/sqlite-dll-win64-x64-3370000.zip
         7z x sqlite_dll.zip sqlite3.dll
         mkdir -p temp/DLLs
         cp -v $(python -c "import sys, pathlib; print([x for x in map(pathlib.Path, sys.path) if x.name == 'DLLs'][0]/'_sqlite3.pyd')") temp/DLLs 
