--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -37,6 +37,7 @@ jobs:
       if: runner.os == 'Windows' && matrix.python-version == '2.7'
       shell: bash
       run: |
+        pip install pathlib
         curl -fsSL -o sqlite_dll.zip https://www.sqlite.org/2021/sqlite-dll-win64-x64-3370000.zip
         7z x sqlite_dll.zip sqlite3.dll
         mkdir -p temp/DLLs
