--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         # platform: [ubuntu-latest, macos-latest, windows-latest]
-        platform: [windows-latest]
+        platform: [macos-latest]
         python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
 
     steps:
