--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -51,6 +51,7 @@ jobs:
         pip install pytest faker igo-python "janome<0.4" tinysegmenter
         pip install -e .
         python -m pytest -svra tests
+    - name: Test with pytest (macOS)
       if: runner.os == 'macOS'
       run: |
         python -m pip install -U pip
