--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,7 +17,8 @@ jobs:
       matrix:
         # platform: [ubuntu-latest, macos-latest, windows-latest]
         platform: [macos-latest]
-        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
+        # python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
+        python-version: ["3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -54,6 +55,8 @@ jobs:
     - name: Test with pytest (macOS)
       if: runner.os == 'macOS'
       run: |
+        sqlite3 --version
+        sqlite3 ":memory:" "PRAGMA compile_options"
         python -m pip install -U pip
         pip install pytest faker igo-python "janome<0.4" tinysegmenter
         pip install -e .
