--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -55,6 +55,8 @@ jobs:
     - name: Test with pytest (macOS)
       if: runner.os == 'macOS'
       run: |
+        sqlite3 ':memory:' 'PRAGMA compile_options'
+        /usr/local/opt/sqlite/bin/sqlite3 ':memory:' 'PRAGMA compile_options'
         env DYLD_PRINT_LIBRARIES=1 python -vc 'import sqlite3; print(sqlite3.connect(":memory:").execute("PRAGMA compile_options").fetchall())'
         python -m pip install -U pip
         pip install pytest faker igo-python "janome<0.4" tinysegmenter
