--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -55,11 +55,14 @@ jobs:
     - name: Test with pytest (macOS)
       if: runner.os == 'macOS'
       run: |
-        sqlite3 ':memory:' 'PRAGMA compile_options'
-        /usr/local/opt/sqlite/bin/sqlite3 ':memory:' 'PRAGMA compile_options'
-        env DYLD_PRINT_LIBRARIES=1 python -vc 'import sqlite3; print(sqlite3.connect(":memory:").execute("PRAGMA compile_options").fetchall())'
+        curl -s https://sqlite.org/2021/sqlite-autoconf-3370000.tar.gz | tar xpf -
+        pushed sqlite-autoconf-3370000
+        CPPFLAGS="-DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS" ./configure --enable-debug
+        make
+        popd
+        env DYLD_PRINT_LIBRARIES=1 DYLD_LIBRARY_PATH=$PWD/sqlite-autoconf-3370000/.libs python -vc 'import sqlite3; print(sqlite3.connect(":memory:").execute("PRAGMA compile_options").fetchall())'
         python -m pip install -U pip
         pip install pytest faker igo-python "janome<0.4" tinysegmenter
         pip install -e .
-        python -m pytest -svra tests
+        env DYLD_LIBRARY_PATH=$PWD/sqlite-autoconf-3370000/.libs python -m pytest -svra tests
 
