--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -53,13 +53,10 @@ jobs:
         pip install -e .
         python -m pytest -svra tests
     - name: Test with pytest (macOS)
-      if: runner.os == 'macOS'
+      #if: runner.os == 'macOS'
       run: |
-        curl -s https://sqlite.org/2021/sqlite-autoconf-3370000.tar.gz | tar xpf -
-        pushed sqlite-autoconf-3370000
-        CPPFLAGS="-DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS" ./configure --enable-debug
-        make
-        popd
+        curl -s https://sqlite.org/2021/sqlite-autoconf-3370000.tar.gz | tar zxpf -
+        cd sqlite-autoconf-3370000 && CPPFLAGS="-DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS" ./configure --enable-debug && make && cd ..
         env DYLD_PRINT_LIBRARIES=1 DYLD_LIBRARY_PATH=$PWD/sqlite-autoconf-3370000/.libs python -vc 'import sqlite3; print(sqlite3.connect(":memory:").execute("PRAGMA compile_options").fetchall())'
         python -m pip install -U pip
         pip install pytest faker igo-python "janome<0.4" tinysegmenter
