--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,11 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # platform: [ubuntu-latest, macos-latest, windows-latest]
-        platform: [macos-latest]
-        # python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
-        python-version: ["3.9"]
-
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -53,11 +50,12 @@ jobs:
         pip install -e .
         python -m pytest -svra tests
     - name: Test with pytest (macOS)
-      #if: runner.os == 'macOS'
+      if: runner.os == 'macOS'
       run: |
+        # it seems brew installed SQLite doesn't work somehow
         curl -s https://sqlite.org/2021/sqlite-autoconf-3370000.tar.gz | tar zxpf -
         cd sqlite-autoconf-3370000 && CPPFLAGS="-DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS" ./configure --enable-debug && make && cd ..
-        env DYLD_PRINT_LIBRARIES=1 DYLD_LIBRARY_PATH=$PWD/sqlite-autoconf-3370000/.libs python -vc 'import sqlite3; print(sqlite3.connect(":memory:").execute("PRAGMA compile_options").fetchall())'
+        # env DYLD_PRINT_LIBRARIES=1 DYLD_LIBRARY_PATH=$PWD/sqlite-autoconf-3370000/.libs python -vc 'import sqlite3; print(sqlite3.connect(":memory:").execute("PRAGMA compile_options").fetchall())'
         python -m pip install -U pip
         pip install pytest faker igo-python "janome<0.4" tinysegmenter
         pip install -e .
