adjust test settings

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py35,py36,py37,py38,py39,py310,pypy2,pypy3}-{macos,win,linux},py38-apsw-linux,py38-apswa-linux
+envlist = {py27,py35,py36,py37,py38,py39,py310,pypy2,pypy3}-{macos,win,linux},py310-apsw-linux,py310-apswa-linux
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -31,27 +31,29 @@ deps =
     pytest
     igo-python
     py27,pypy2: pathlib
-    py27,pypy2: janome<0.4
-    py{35,36,37,38,39,310},pypy3: janome
+    py27,py35,pypy2: janome<0.4
+    py{36,37,38,39,310},pypy3: janome
     tinysegmenter
     faker
-    linux: mecab
-    linux: natto-py
+    py{27,35,36,37,38,39,310}-linux,pypy3-linux: mecab
+    py{35,36,37,38,39,310}-linux,pypy3-linux: natto-py
+    py27-linux: natto-py<1.0
 commands=
     py.test -svrx
 
 [apsw]
+# Ubuntu 20.04 has SQLite 3.31.1
 commands=
-    pip install https://github.com/rogerbinns/apsw/releases/download/3.32.2-r1/apsw-3.32.2-r1.zip --global-option=build --global-option=--enable-all-extensions
+    pip install https://github.com/rogerbinns/apsw/releases/download/3.31.1-r1/apsw-3.31.1-r1.zip --global-option=build --global-option=--enable-all-extensions
     py.test -svrx
 
 [apswa]
 commands=
-    pip install https://github.com/rogerbinns/apsw/releases/download/3.32.2-r1/apsw-3.32.2-r1.zip --global-option=fetch --global-option=--version=3.32.2 --global-option=--sqlite --global-option=build --global-option=--enable-all-extensions
+    pip install https://github.com/rogerbinns/apsw/releases/download/3.36.0-r1/apsw-3.36.0-r1.zip --global-option=fetch --global-option=--version=3.36.0 --global-option=--sqlite --global-option=build --global-option=--enable-all-extensions
     py.test -svrx
 
-[testenv:py38-apsw-linux]
+[testenv:py310-apsw-linux]
 commands={[apsw]commands}
 
-[testenv:py38-apswa-linux]
+[testenv:py310-apswa-linux]
 commands={[apswa]commands}
