--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
+        python-version: ["2.7", "3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "pypy-2.7", "pypy-3.8"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -31,8 +31,8 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
-    - name: Install native deps (Windows)
-      if: runner.os == 'Windows' && matrix.python-version == '2.7'
+    - name: Install native deps (Windows) # for older versions
+      if: runner.os == 'Windows' && (matrix.python-version == '2.7' || matrix.python-version == '3.5')
       shell: bash
       run: |
         pip install pathlib
@@ -50,7 +50,7 @@ jobs:
         pip install -e .
         python -m pytest -svra tests
     - name: Test with pytest (macOS)
-      if: runner.os == 'macOS'
+      if: runner.os == 'macOS' && (matrix.python-version == 'pypy-2.7' || matrix.python.version == 'pypy-3.8')
       run: |
         # it seems brew installed SQLite doesn't work somehow
         curl -s https://sqlite.org/2021/sqlite-autoconf-3370000.tar.gz | tar zxpf -
