--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -42,7 +42,7 @@ jobs:
         pip install -e .
         python -m pytest -svra tests
     - name: Test with tox
-      if: runner.os == 'Linux' || (runner.os == 'Windows' && (`matrix.python-version != '2.7' || matrix.python.version != '3.5'))
+      if: runner.os == 'Linux' || (runner.os == 'Windows' && (matrix.python-version != '2.7' || matrix.python.version != '3.5'))
       run: |
         python -m pip install tox tox-gh-actions
         tox
