--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,24 @@
 [tox]
-envlist = {py36,py37,py38,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
-# envlist = {py27,py35,py36,py37,py38,pypy,pypy3}-{win,linux},py38-apsw-linux,py38-apswa-linux
+envlist = {py27,py35,py36,py37,py38,py39,py310,pypy2,pypy3}-{macos,win,linux},py310-apsw-linux,py310-apswa-linux
+skip_missing_interpreters = true
+
+[gh-actions]
+python =
+    2.7: py27
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    pypy-2: pypy2
+    pypy-3: pypy3
+
+[gh-actions:env]
+PLATFORM =
+    ubuntu-latest: linux
+    macos-latest: macos
+    windows-latest: windows
 
 [testenv]
 changedir = tests
@@ -8,29 +26,34 @@ passenv = PYTHONPATH
 platform =
     win: win32
     linux: linux
+    macos: darwin
 deps =
     pytest
     igo-python
-    janome
+    py27,pypy2: pathlib
+    py27,py35,pypy2: janome<0.4
+    py{36,37,38,39,310},pypy3: janome
     tinysegmenter
     faker
-    py{35,36,37,38}-linux: mecab
-    py{35,36,37,38}-linux: natto-py
+    py{27,35,36,37,38,39,310}-linux,pypy3-linux: mecab
+    py{35,36,37,38,39,310}-linux,pypy3-linux: natto-py
+    py27-linux: natto-py<1.0
 commands=
     py.test -svrx
 
 [apsw]
+# Ubuntu 20.04 has SQLite 3.31.1
 commands=
-    pip install https://github.com/rogerbinns/apsw/releases/download/3.32.2-r1/apsw-3.32.2-r1.zip --global-option=build --global-option=--enable-all-extensions
+    pip install https://github.com/rogerbinns/apsw/releases/download/3.31.1-r1/apsw-3.31.1-r1.zip --global-option=build --global-option=--enable-all-extensions
     py.test -svrx
 
 [apswa]
 commands=
-    pip install https://github.com/rogerbinns/apsw/releases/download/3.32.2-r1/apsw-3.32.2-r1.zip --global-option=fetch --global-option=--version=3.32.2 --global-option=--sqlite --global-option=build --global-option=--enable-all-extensions
+    pip install https://github.com/rogerbinns/apsw/releases/download/3.36.0-r1/apsw-3.36.0-r1.zip --global-option=fetch --global-option=--version=3.36.0 --global-option=--sqlite --global-option=build --global-option=--enable-all-extensions
     py.test -svrx
 
-[testenv:py38-apsw-linux]
+[testenv:py310-apsw-linux]
 commands={[apsw]commands}
 
-[testenv:py38-apswa-linux]
+[testenv:py310-apswa-linux]
 commands={[apswa]commands}
