use the latest apsw wheel package

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py35,py36,py37,py38,py39,py310,py311,pypy2,pypy3}-{macos,win,linux},py311-apsw-linux,py311-apswa-linux
+envlist = {py27,py35,py36,py37,py38,py39,py310,py311,pypy2,pypy3}-{macos,win,linux},py311-apsw-linux
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -42,19 +42,7 @@ deps =
 commands=
     py.test -svrx
 
-[apsw]
-# Ubuntu 20.04 has SQLite 3.31.1
-commands=
-    pip install https://github.com/rogerbinns/apsw/releases/download/3.31.1-r1/apsw-3.31.1-r1.zip --global-option=build --global-option=--enable-all-extensions
-    py.test -svrx
-
-[apswa]
-commands=
-    pip install https://github.com/rogerbinns/apsw/releases/download/3.38.1-r1/apsw-3.38.1-r1.zip --global-option=fetch --global-option=--version=3.38.1 --global-option=--sqlite --global-option=build --global-option=--enable-all-extensions
-    py.test -svrx
-
 [testenv:py311-apsw-linux]
-commands={[apsw]commands}
-
-[testenv:py311-apswa-linux]
-commands={[apswa]commands}
+commands=
+    pip install apsw==3.39.4.0
+    py.test -svrx
