--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["2.7", "3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "pypy-2.7", "pypy-3.9"]
+        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "3.11", "pypy-2.7", "pypy-3.9"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -28,7 +28,7 @@ jobs:
       run: |
         sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
     - name: Test with pytest (Windows & Py27/35)
-      if: runner.os == 'Windows' && (matrix.python-version == '2.7' || matrix.python-version == '3.5')
+      if: runner.os == 'Windows' && matrix.python-version == '2.7'
       shell: bash
       run: |
         pip install pathlib
@@ -39,7 +39,7 @@ jobs:
         pip install -e .
         python -m pytest -svra tests
     - name: Test with tox
-      if: runner.os == 'Linux' || (runner.os == 'Windows' && (matrix.python-version != '2.7' && matrix.python-version != '3.5'))
+      if: runner.os == 'Linux' || (runner.os == 'Windows' && matrix.python-version != '2.7')
       run: |
         python -m pip install tox tox-gh-actions
         tox
