drop APSW support

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py35,py36,py37,py38,py39,py310,py311,pypy2,pypy3}-{macos,win,linux},py311-apsw-linux
+envlist = {py27,py35,py36,py37,py38,py39,py310,py311,pypy2,pypy3}-{macos,win,linux}
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -40,9 +40,4 @@ deps =
     py{35,36,37,38,39,310}-linux,pypy3-linux: natto-py
     py27-linux: natto-py<1.0
 commands=
-    py.test -svrx
-
-[testenv:py311-apsw-linux]
-commands=
-    pip install apsw==3.39.4.0
     py.test -svrx
