drop python 2 and 3.5 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,15 @@
 [tox]
-envlist = {py27,py35,py36,py37,py38,py39,py310,py311,pypy2,pypy3}-{macos,win,linux}
+envlist = {py36,py37,py38,py39,py310,py311,pypy3}-{macos,win,linux}
 skip_missing_interpreters = true
 
 [gh-actions]
 python =
-    2.7: py27
-    3.5: py35
     3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311
-    pypy-2: pypy2
     pypy-3: pypy3
 
 [gh-actions:env]
@@ -31,13 +28,10 @@ platform =
 deps =
     pytest
     igo-python
-    py27,pypy2: pathlib
-    py27,py35,pypy2: janome<0.4
     py{36,37,38,39,310},pypy3: janome
     tinysegmenter
     faker
-    py{27,35,36,37,38,39,310}-linux,pypy3-linux: mecab
-    py{35,36,37,38,39,310}-linux,pypy3-linux: natto-py
-    py27-linux: natto-py<1.0
+    py{36,37,38,39,310}-linux,pypy3-linux: mecab
+    py{36,37,38,39,310}-linux,pypy3-linux: natto-py
 commands=
     py.test -svrx
