bring tests for sqlitefts with APSW back

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py36,py37,py38,py39,py310,py311,pypy3}-{macos,win,linux}
+envlist = {py36,py37,py38,py39,py310,py311,pypy3}-{macos,win,linux},py311-apsw-linux
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -34,4 +34,9 @@ deps =
     py{36,37,38,39,310}-linux,pypy3-linux: mecab
     py{36,37,38,39,310}-linux,pypy3-linux: natto-py
 commands=
+    py.test -svrx
+
+[testenv:py311-apsw-linux]
+commands=
+    pip install apsw==3.40.0.0
     py.test -svrx
