--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "3.11", "pypy-2.7", "pypy-3.9"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "pypy-3.9"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -27,32 +27,21 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
-    - name: Test with pytest (Windows & Py27/35)
-      if: runner.os == 'Windows' && matrix.python-version == '2.7'
-      shell: bash
-      run: |
-        pip install pathlib
-        curl -fsSL -o sqlite_dll.zip https://www.sqlite.org/2022/sqlite-dll-win64-x64-3380200.zip
-        7z x sqlite_dll.zip sqlite3.dll
-        cp -v $(python -c "import sys, pathlib; print([x for x in map(pathlib.Path, sys.path) if x.name == 'DLLs'][0]/'_sqlite3.pyd')") .
-        pip install pytest faker igo-python "janome<0.4" tinysegmenter
-        pip install -e .
-        python -m pytest -svra tests
     - name: Test with tox
-      if: runner.os == 'Linux' || (runner.os == 'Windows' && matrix.python-version != '2.7')
+      if: runner.os == 'Linux' || runner.os == 'Windows'
       run: |
         python -m pip install tox tox-gh-actions
         tox
     - name: Install native deps (macOS)
-      if: runner.os == 'macOS' && (matrix.python-version != 'pypy-2.7' || matrix.python.version != 'pypy-3.9')
+      if: runner.os == 'macOS' && matrix.python.version != 'pypy-3.9'
       run: |
         # it seems brew installed SQLite doesn't work with CPython somehow
-        curl -s https://www.sqlite.org/2022/sqlite-autoconf-3380200.tar.gz | tar zxpf -
-        cd sqlite-autoconf-3380200 && CPPFLAGS="-DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS" ./configure --enable-debug && make && cd ..
+        curl -s https://www.sqlite.org/2022/sqlite-autoconf-3400000.tar.gz | tar zxpf -
+        cd sqlite-autoconf-3400000 && CPPFLAGS="-DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS" ./configure --enable-debug && make && cd ..
         # env DYLD_PRINT_LIBRARIES=1 DYLD_LIBRARY_PATH=$PWD/sqlite-autoconf-3370000/.libs python -vc 'import sqlite3; print(sqlite3.connect(":memory:").execute("PRAGMA compile_options").fetchall())'
     - name: Test with pytest (macOS)
       if: runner.os == 'macOS'
       run: |
         pip install pytest faker igo-python "janome<0.4" tinysegmenter
         pip install -e .
-        env DYLD_LIBRARY_PATH=$PWD/sqlite-autoconf-3380200/.libs python -m pytest -svra tests
+        env DYLD_LIBRARY_PATH=$PWD/sqlite-autoconf-3400000/.libs python -m pytest -svra tests
