--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
-envlist = {py27,py35,py36,py37,py38,py39,py310,py311,pypy2,pypy3}-{macos,win,linux},py311-apsw-linux
+envlist = {py27,py35,py36,py37,py38,py39,py310,py311,py312,pypy2,pypy3}-{macos,win,linux},py311-apsw-linux
 skip_missing_interpreters = true
+requires =
+tox>=4
 
 [gh-actions]
 python =
@@ -12,6 +14,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12-dev: py312
     pypy-2: pypy2
     pypy-3: pypy3
 
@@ -36,8 +39,8 @@ deps =
     py{36,37,38,39,310},pypy3: janome
     tinysegmenter
     faker
-    py{27,35,36,37,38,39,310}-linux,pypy3-linux: mecab
-    py{35,36,37,38,39,310}-linux,pypy3-linux: natto-py
+    py{27,35,36,37,38,39,310,311,312}-linux,pypy3-linux: mecab
+    py{35,36,37,38,39,310,311,312}-linux,pypy3-linux: natto-py
     py27-linux: natto-py<1.0
 commands=
     py.test -svrx
