--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,15 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = ["mypy~=1.3.0", "faker~=18.9.0", "black~=23.3.0", "flake8~=5.0.4", "isort~=5.11.5", "pytest~=7.3.1"]
+dev-dependencies = [
+    "mypy>=1.5.1",
+    "faker>=19.3.0",
+    "black>=23.7.0",
+    "flake8>=6.1.0",
+    "isort>=5.12.0",
+    "pytest>=7.4.0",
+    "types-cffi>=1.15.1.15",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
