--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,34 +14,26 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "3.11", "pypy-2.7", "pypy-3.9"]
+        python-version:
+          ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy2.7", "pypy3.10"]
         experimental: [false]
-        include:
-          - python-version: 3.12-dev
-            platform: ubuntu-latest
-            experimental: true
-          - python-version: 3.12-dev
-            platform: windows-latest
-            experimental: true
-          - python-version: 3.12-dev
-            platform: macos-latest
-            experimental: true
+        include: []
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python3 -m pip install -U pip
-        python3 -m pip install tox tox-gh-actions
-        tox --version
-    - name: Install native deps (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        sudo apt update
-        sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
-    - name: Test with tox
-      run: |
-        tox
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python3 -m pip install -U pip
+          python3 -m pip install tox tox-gh-actions
+          tox --version
+      - name: Install native deps (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt update
+          sudo apt install -y mecab libmecab-dev mecab-ipadic-utf8
+      - name: Test with tox
+        run: |
+          tox
