--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,11 @@ name = "sqlitefts"
 version = "1.0.0"
 description = "A Python binding for tokenizers of SQLite Full Text Search"
 authors = [{ name = "Hideaki Takahashi", email = "mymelo@gmail.com" }]
-dependencies = ["cffi~=1.15.1"]
+dependencies = [
+    "cffi>=1.16.0",
+]
 readme = "README.rst"
-requires-python = ">=2.7,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,<4"
+requires-python = ">=3.8.1"
 license = { text = "MIT" }
 keywords = [
   "SQLite",
@@ -22,8 +24,6 @@ classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
-  "Programming Language :: Python :: 2.7",
-  "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
@@ -47,12 +47,12 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "mypy>=1.5.1",
-    "faker>=19.3.0",
-    "black>=23.7.0",
+    "faker>=19.6.2",
+    "black>=23.9.1",
     "flake8>=6.1.0",
     "isort>=5.12.0",
-    "pytest>=7.4.0",
-    "types-cffi>=1.15.1.15",
+    "pytest>=7.4.2",
+    "types-cffi>=1.16.0.0",
 ]
 
 [tool.hatch.metadata]
