--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ version = "1.0.0"
 description = "A Python binding for tokenizers of SQLite Full Text Search"
 authors = [{ name = "Hideaki Takahashi", email = "mymelo@gmail.com" }]
 dependencies = [
-    "cffi>=1.16.0",
+    "cffi>=1.15.1 ; platform_python_implementation != 'PyPy'",
 ]
 readme = "README.rst"
-requires-python = ">=3.8.1"
+requires-python = ">=2.7,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,<4"
 license = { text = "MIT" }
 keywords = [
   "SQLite",
@@ -24,6 +24,7 @@ classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
+  "Programming Language :: Python :: 2.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
