--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -41,7 +41,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: sksat/setup-rye@v0.8.0
+      - uses: sksat/setup-rye@v0.14.0
+        with:
+          version: 0.24.0
       - name: prepare
         run: |
           rye sync
