--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,7 +17,16 @@ jobs:
         python-version:
           ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy2.7", "pypy3.10"]
         experimental: [false]
-        include: []
+        include:
+          - python-version: 3.13-dev
+            platform: ubuntu-latest
+            experimental: true
+          - python-version: 3.13-dev
+            platform: windows-latest
+            experimental: true
+          - python-version: 3.13-dev
+            platform: macos-latest
+            experimental: true
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
