--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py38,py39,py310,py311,py312,pypy2,pypy3}-{macos,win,linux},py312-apsw-linux
+envlist = {py27,py38,py39,py310,py311,py312,py313,pypy2,pypy3}-{macos,win,linux},py312-apsw-linux
 skip_missing_interpreters = true
 requires =
 tox>=4
@@ -12,6 +12,7 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
     pypy-2: pypy2
     pypy-3: pypy3
 
