specify newer apsw

--- a/tox.ini
+++ b/tox.ini
@@ -45,5 +45,5 @@ commands=
 
 [testenv:py312-apsw-linux]
 commands=
-    pip install apsw==3.43.1.0
+    pip install apsw>=3.46.1.0
     py.test -svrx
