--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -44,7 +44,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python3 -m pip install tox tox-gh-actions
+          python3 -m pip install 'tox>=4' 'tox-gh-actions>=3'
           tox --version
       - name: Install native deps (Linux)
         if: runner.os == 'Linux'
