--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,11 +53,11 @@ packages = ["sqlitefts"]
 
 [tool.uv]
 dev-dependencies = [
-    "mypy>=1.11.2 ; python_full_version >= '3.12'",
-    "faker>=28.0.0 ; python_full_version >= '3.12'",
-    "pytest>=8.3.2 ; python_full_version >= '3.12'",
-    "types-cffi>=1.16.0.0 ; python_full_version >= '3.12'",
-    "ruff>=0.6.2 ; python_full_version >= '3.12'"
+    "mypy>=1.11.2 ; python_version >= '3.12'",
+    "faker>=28.0.0 ; python_version >= '3.12'",
+    "pytest>=8.3.2 ; python_version >= '3.12'",
+    "types-cffi>=1.16.0.0 ; python_version >= '3.12'",
+    "ruff>=0.6.2 ; python_version >= '3.12'"
 ]
 
 [tool.hatch.build]
