--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,18 +15,9 @@ jobs:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
-          ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy3.10"]
+          ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "pypy3.10"]
         experimental: [false]
         include:
-          - python-version: 3.13-dev
-            platform: ubuntu-latest
-            experimental: true
-          - python-version: 3.13-dev
-            platform: windows-latest
-            experimental: true
-          - python-version: 3.13-dev
-            platform: macos-latest
-            experimental: true
           - python-version: pypy2.7
             platform: ubuntu-latest
             experimental: true
