--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -8,21 +8,21 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ${{ matrix.platform }}
+    runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
           ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "pypy3.10"]
         experimental: [false]
         include:
           - python-version: pypy2.7
-            platform: ubuntu-latest
+            os: ubuntu-latest
             experimental: true
           - python-version: pypy2.7
-            platform: windows-latest
+            os: windows-latest
             experimental: true
     steps:
       - uses: actions/checkout@v4
