--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          allow-prereleases: true
       - name: Install dependencies
         run: |
           python3 -m pip install 'tox>=4' 'tox-gh-actions>=3'
